# candle

./: Cargo.toml  tweaks.md
candle-book/: Cargo.toml
candle-core/: Cargo.toml
candle-core/src/: backprop.rs  convert.rs  device.rs  display.rs  dtype.rs  dummy_cuda_backend.rs  lib.rs  npy.rs  op.rs  pickle.rs  safetensors.rs  scalar.rs  sort.rs  tensor.rs  variable.rs
candle-core/src/cpu/: avx.rs  avx512.rs  kernels.rs  mod.rs
candle-core/src/cpu_backend/: convert.rs  mod.rs  utils.rs
candle-core/src/cuda_backend/: cudnn.rs  device.rs  mod.rs  utils.rs
candle-core/src/metal_backend/: device.rs  mod.rs
candle-core/src/quantized/: avx.rs  ggml_file.rs  gguf_file.rs
candle-core/src/tweaks/: cells.rs  compact.rs  flags.rs  misc.rs  mod.rs  module.rs  parallel.rs  serde.rs  tensor.rs  vars.rs
candle-core/src/tweaks/async_/: mod.rs
candle-datasets/: Cargo.toml
candle-examples/: Cargo.toml
candle-examples/examples/gemma/: main.rs
candle-kernels/: build.rs
candle-kernels/src/: affine.cu  binary.cu  cast.cu  conv.cu  cuda_utils.cuh  fill.cu  indexing.cu  reduce.cu  sort.cu  ternary.cu  unary.cu
candle-nn/: Cargo.toml
candle-nn/examples/: basic_optimizer.rs
candle-nn/src/: activation.rs  batch_norm.rs  embedding.rs  group_norm.rs  init.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  ops.rs  optim.rs  rnn.rs  sequential.rs  var_builder.rs  var_map.rs
candle-nn/src/optim/: adamw.rs  gradclip.rs  lion.rs  mod.rs  muon.rs  nadamw.rs  scheduler.rs  sgd.rs  sophia.rs
candle-nn/src/tweaks/: mod.rs  serializable.rs  storage.rs
candle-nn/src/tweaks/serializable/: seq.rs
candle-pyo3/: Cargo.toml
candle-pyo3/src/: lib.rs
candle-transformers/: Cargo.toml
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: beit.rs  debertav2.rs  deepseek2.rs  dinov2.rs  modernbert.rs  quantized_qwen3.rs
