[workspace]
members = [
    "candle-core",
    "candle-datasets",
    "candle-examples",
    "candle-nn",
    "candle-pyo3",
    "candle-transformers",
    "candle-wasm-examples/*",
    "candle-wasm-tests",
    "tensor-tools",
]
exclude = [
    "candle-book",
    "candle-flash-attn",
    "candle-flash-attn-v3",
    "candle-kernels",
    "candle-metal-kernels",
    "candle-onnx",
]
resolver = "2"

[workspace.package]
version = "0.9.2-alpha.1"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ahash = { version = "0.8" }
ab_glyph = "0.2.23"
accelerate-src = { version = "0.3.2" }
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
candle = { path = "./candle-core", package = "candle-core", version = "0.9.2-alpha.1" }
candle-datasets = { path = "./candle-datasets", version = "0.9.2-alpha.1" }
candle-flash-attn = { path = "./candle-flash-attn", version = "0.9.2-alpha.1" }
candle-flash-attn-v3 = { path = "./candle-flash-attn-v3", version = "0.9.2-alpha.1" }
candle-kernels = { path = "./candle-kernels", version = "0.9.2-alpha.1" }
candle-metal-kernels = { path = "./candle-metal-kernels", version = "0.9.2-alpha.1" }
candle-nn = { path = "./candle-nn", version = "0.9.2-alpha.1" }
candle-onnx = { path = "./candle-onnx", version = "0.9.2-alpha.1" }
candle-transformers = { path = "./candle-transformers", version = "0.9.2-alpha.1" }
clap = { version = "4.2.4", features = ["derive"] }
criterion = { version = "0.7.0", default-features = false }
cudarc = { version = "0.17.7", features = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
    "cuda-version-from-build-system",
    "dynamic-linking",
], default-features = false }
fancy-regex = "0.16.0"
gemm = { version = "0.18.2", features = ["wasm-simd128-enable"] }
hf-hub = "0.4.1"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
float8 = { version = "0.4.2", features = [
    "num-traits",
    "rand_distr",
] }
hound = "3.5.1"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.25.0", default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.147" }
libm = { version = "0.2.15" }
log = "0.4"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
num_cpus = "1.15.0"
num-traits = "0.2.15"
parquet = { version = "56" }
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.7.0"
safetensors = "0.6"
serde = { version = "1.0.171", features = ["derive"] }
serde_plain = "1.0.2"
serde_json = "1.0"
thiserror = "2"
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
ug = "0.5.0"
ug-cuda = "0.5.0"
ug-metal = "0.5.0"
yoke = { version = "0.8.0", features = ["derive"] }
zip = { version = "5.1.1", default-features = false }
objc2-metal = { version = "0.3.1" }
objc2-foundation = { version = "0.3.1" }

[profile.release-with-debug]
inherits = "release"
debug = true
